[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoclib"
path = "src/aoclib/lib.rs"

[dependencies]
anyhow = "1"
bit-set = "0.5"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = "3"
derive_more = { version = "2", features = ["full"] }
good_lp = { version = "1", features = ["highs"], default-features = false }
image = "0.24.7"
itertools = "0.14"
lru-cache = "0.1.2"
memoize = "0.4.2"
mut-binary-heap = "0.1.0"
nom = "7.1"
nonempty = { version = "0.9", features = ["serde"] }
num = "0.4.1"
num-integer = "0.1.46"
num-traits = "0.2"
ordered-float = "5"
petgraph = "0.6"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
smol_str = "0.3.2"
tap = "1.0.1"
test-log = { version = "0.2", features = ["trace", "color"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
